--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
 </head>
 
-<body id="Pindex" >
+<body id="Pindex" onload="sesionAbierta ()" >
     <header class="header1"></header>
     <section id="inicio">
         <h1 >CLICK&SHARE</h1>
