--- a/src/paginas/grupos.html
+++ b/src/paginas/grupos.html
@@ -16,8 +16,9 @@
     <!-- main  -->
     <script defer src="../../javascript/mainVars.js"></script>
 
-    <script defer src="./../../javascript/grupos/grupoHTML.js"></script>
+    <script defer src="./../../javascript/grupos/grupos.js"></script>
     <script defer src="./../../javascript/grupos/lightmode.js"></script>
+    <script defer src="./../../javascript/grupos/perfil.js"></script>
 </head>
 <body>
     <section id="gruposBody" >
@@ -53,10 +54,14 @@
                 </div>
                 <div class="perfil">
                     <h6 class="nombreUsuario "> </h6>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle " viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle fotoPerfil" viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                       </svg>
+                    <div class="perfil-options shadow cerrado">
+                        <button>Mi cuenta</button>
+                        <button id="cerrarSesion">Cerrar sesión</button>
+                    </div>
                 </div>
             </div>
             <div class="grupos">
