--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
     <!-- animaciones  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- librería  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="javascript/swal.js"></script>
     
     <title>Click&Share | Comparte tus mejores fotos | Home </title>
     
@@ -54,6 +58,7 @@
         <a href="./src/paginas/registrar.html" aria-label="ir a página Registrar">
             <button>Únete ahora</button>
         </a>
+        <button class="descargarApp">Descarga App</button>
     </section> 
     <section id="pasos">
         <div>
