--- a/src/paginas/grupos.html
+++ b/src/paginas/grupos.html
@@ -19,6 +19,8 @@
     <script defer src="./../../javascript/grupos/grupos.js"></script>
     <script defer src="./../../javascript/grupos/lightmode.js"></script>
     <script defer src="./../../javascript/grupos/perfil.js"></script>
+
+    <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <section id="gruposBody" >
@@ -59,8 +61,8 @@
                         <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                       </svg>
                     <div class="perfil-options shadow cerrado">
-                        <button>Mi cuenta</button>
-                        <button id="cerrarSesion">Cerrar sesión</button>
+                        <p>Mi cuenta</p>
+                        <p id="cerrarSesion">Cerrar sesión</p>
                     </div>
                 </div>
             </div>
