--- a/src/paginas/footer/politica-priv.html
+++ b/src/paginas/footer/politica-priv.html
@@ -37,6 +37,7 @@
     <!-- header  -->
     <script defer src="../../../javascript/header/headerHTML.js"></script>
     <script defer src="../../../javascript/header/headerScroll.js"></script>
+    <script defer src="../../../javascript/header/submenu.js"></script>
 
     <!-- animaciones  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -44,6 +45,8 @@
 </head>
 <body id="Pfooter" class="privBody">
     <header class="header1"></header>
+
+    <svg xmlns="http://www.w3.org/2000/svg" style="position: absolute;" viewBox="0 0 1440 320"><path fill="#000f33" fill-opacity="1" d="M0,256L30,234.7C60,213,120,171,180,133.3C240,96,300,64,360,48C420,32,480,32,540,42.7C600,53,660,75,720,80C780,85,840,75,900,112C960,149,1020,235,1080,240C1140,245,1200,171,1260,138.7C1320,107,1380,117,1410,122.7L1440,128L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path></svg>
 
     <div class="politica-priv">
         <h2>POLÍTICA DE DATOS</h2>
@@ -69,6 +72,10 @@
         </p>
     </div> 
     
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000f33" fill-opacity="1" d="M0,96L60,85.3C120,75,240,
+        53,360,74.7C480,96,600,160,720,202.7C840,245,960,267,1080,277.3C1200,288,1320,288,1380,288L1440,288L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+    </svg>
+
     <footer></footer>
     
     <!-- instalaciones de css  -->
