--- a/src/paginas/iniciar-sesion.html
+++ b/src/paginas/iniciar-sesion.html
@@ -30,8 +30,8 @@
     <script defer src="../../javascript/mainVars.js"></script>
 
     <script defer src="./../../javascript/sesiones/variables.js"></script>
-    <script defer src="./../../javascript/sesiones/DOMmanipulation.js"></script>
     <script defer src="./../../javascript/sesiones/funciones.js"></script>
+    <script defer src="./../../javascript/sesiones/iniciarSesion.js"></script>
 
     <!-- botón atrás  -->
     <script defer src="./../../javascript/sesiones/btnAtras.js"></script> 
@@ -49,11 +49,11 @@
         <p><a href="registrar.html">No tengo una cuenta</a></p>
         <form class="form">
             <label for="username">
-                <input type="text" class="nombre  escribir" placeholder="Ingrese su nombre de usuario">
+                <input type="text" class="nombre  escribir" placeholder="Usuario">
                 <h6 class="submitError"></h6>
             </label>
             <label for="password">
-                <input type="password" class="contrasena  escribir" placeholder="Ingrese su contraseña">
+                <input type="password" class="contrasena  escribir" placeholder="Contraseña">
                 <h6 class="submitError"></h6>
             </label>
             <a href="" class="isSubmit"><button type="submit" onclick="iniciarSesion(event)" class="boton"> Iniciar sesión</button></a>
