--- a/src/paginas/registrar.html
+++ b/src/paginas/registrar.html
@@ -30,9 +30,8 @@
     <script defer src="../../javascript/mainVars.js"></script>
 
     <script defer src="./../../javascript/sesiones/variables.js"></script>
-    <script defer src="./../../javascript/sesiones/DOMmanipulation.js"></script>
-    <script defer src="./../../javascript/sesiones/examinarDatos.js"></script>
     <script defer src="./../../javascript/sesiones/funciones.js"></script>
+    <script defer src="./../../javascript/sesiones/registrarse.js"></script>
     <script defer src="./../../javascript/sesiones/crearUser.js"></script>
 
     <!-- botón atrás  -->
@@ -53,15 +52,15 @@
             <p><a href="iniciar-sesion.html">Ya tengo una cuenta</a></p>
             <form class="form">
                 <label for="email" >
-                    <input type="email" class="mail escribir " placeholder="Ingrese su correo electrónico">
+                    <input type="email" class="mail escribir " placeholder="Email" required>
                     <h6 class="submitError"></h6>
                 </label>
                 <label for="username"  >
-                    <input type="text" class="nombre escribir " placeholder="Nombre de usuario">
+                    <input type="text" class="nombre escribir " placeholder="Usuario">
                     <h6 class="submitError"></h6>
                 </label>
                 <label for="password" >
-                    <input type="password" class="contrasena escribir " placeholder="Ingrese su contraseña">
+                    <input type="password" class="contrasena escribir " placeholder="Contraseña">
                     <h6 class="submitError"></h6>
                 </label>
                 <label for="password2" >
