--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     <!-- header -->
     <script defer src="javascript/header/headerHTML.js"></script>
     <script defer src="javascript/header/headerScroll.js"></script>
+    <script defer src="javascript/header/submenu.js"></script>
+
+    <script defer src="javascript/header/sessionBtn.js"></script>
 
     <!-- animaciones  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -50,7 +53,7 @@
     
 </head>
 
-<body id="Pindex" onload="sesionAbierta ()" >
+<body id="Pindex"  >
     <header class="header1"></header>
     <section id="inicio">
         <h1 >CLICK&SHARE</h1>
@@ -62,19 +65,22 @@
     </section> 
     <section id="pasos">
         <div>
-            <p class="title" data-aos="fade-up">CREA UN GRUPO</p>
+            <p class="title title1" data-aos="fade-up">Crea un grupo</p>
             <p class="explicacion">Crea un grupo con la gente
             a la que quieras compartir tus
             fotos.</p>
+            <div>
+                <img src="" alt="">
+            </div>
         </div>
         <div>
-            <p class="title" >COMPARTE EL ID</p>
+            <p class="title" >Comparte el ID</p>
             <p class="explicacion">Comparte el ID que se le              
                 asigna al grupo con el link o 
                 simplemente desde la app. </p>
         </div>
         <div>
-            <p class="title" >ACTIVA EL BOTÓN</p>
+            <p class="title" >Activa el botón</p>
             <p class="explicacion">Activa el botón de “compartir
                 fotos” dentro de los ajustes                    
                 del grupo al que vas a enviar
@@ -111,10 +117,16 @@
         <h2 data-aos="zoom-in">USTEDES</h2>
     </section>
     <section id="pre-footer" >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fdcd49" fill-opacity="1" d="M0,320L60,277.3C120,235,240,149,360,122.7C480,96,600,128,720,160C840,192,960,224,1080,224C1200,224,1320,192,1380,176L1440,160L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+          </svg>
         <h2 data-aos="zoom-in">ANÍMATE</h2>
         <a href="./src/paginas/registrar.html">
             <button >Empieza ya</button>
         </a>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#E04DB0" fill-opacity="1" d="M0,256L34.3,256C68.6,256,137,256,206,245.3C274.3,235,343,213,411,224C480,235,549,277,617,250.7C685.7,224,754,128,823,85.3C891.4,43,960,53,1029,58.7C1097.1,64,1166,64,1234,74.7C1302.9,85,1371,107,1406,117.3L1440,128L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path>
+          </svg>
     </section>
 
     <footer>
