--- a/src/paginas/footer/centro-de-ayuda.html
+++ b/src/paginas/footer/centro-de-ayuda.html
@@ -41,6 +41,7 @@
     <!-- header  -->
     <script defer src="../../../javascript/header/headerHTML.js"></script>
     <script defer src="../../../javascript/header/headerScroll.js"></script>
+    <script defer src="../../../javascript/header/submenu.js"></script>
 
     <!-- animaciones  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
