--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             a la que quieras compartir tus
             fotos.</p>
             <div>
-                <img src="" alt="">
+                <video autoplay muted loop>
+                    <source src="src/fotos/crear-grupos.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
         <div>
