--- a/src/paginas/footer/centro-de-ayuda.html
+++ b/src/paginas/footer/centro-de-ayuda.html
@@ -30,6 +30,7 @@
     <!-- main  -->
     <script defer src="../../../javascript/mainVars.js"></script>
 
+    <script defer src="../../../javascript/centro-de-ayuda/preguntas.js"></script>
     <script defer src="../../../javascript/centro-de-ayuda/variables.js"></script>
 
     <!-- footer  -->
@@ -64,7 +65,10 @@
 
     <section class="preguntas-destacadas " data-aos="fade-up" data-aos-duration="1000">
        <h5>Preguntas destacadas</h5>
+       <div id="questions">
 
+       </div>
+        
        <div class="todas-pregs">
             <div class="preguntas">
                 <div class="contenedores">
