--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- java script  -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <script defer src="javascript/base-datos/configuracion.js"></script>
+
     <script defer src="javascript/mainVars.js"></script>
 
     <!-- footer  -->
@@ -101,14 +107,14 @@
     </section>
     <section id="ustedes" > 
         <div class="conteiners">
-            <div data-aos="fade-up" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000" >
                 <p class="comillas">"</p>
-                <p class="gente">comentarios de gente... <br>
+                <p class="gente" id="comment1">Cargando... <br>
                    
             </div>
-            <div data-aos="fade-up" data-aos-duration="1000">
+            <div data-aos="fade-up" data-aos-duration="1000" >
                 <p class="comillas">"</p>
-                <p class="gente">comentarios de gente... <br>
+                <p class="gente" id="comment2">Cargando... <br>
                 <br>
                   
             </div>
