--- a/src/paginas/grupos.html
+++ b/src/paginas/grupos.html
@@ -25,7 +25,9 @@
 
     <script defer src="./../../javascript/grupos/variables.js"></script>
     <script defer src="./../../javascript/grupos/funciones.js"></script>
+    <script defer src="./../../javascript/grupos/css-interact.js"></script>
     <script defer src="./../../javascript/grupos/grupos.js"></script>
+    <script defer src="./../../javascript/grupos/fotos.js"></script>
 
 </head>
 <body id="gruposBody" >
@@ -34,7 +36,7 @@
         <div class="perfil">
             <h6 class="nombreUsuario "> </h6>
             <div id="fotoPerfil">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle fotoPerfil" viewBox="0 0 16 16" >
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle fotoPerfilSVG" viewBox="0 0 16 16" >
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                   </svg>
@@ -47,8 +49,9 @@
     </header>
 
     <section class="grupos-pag">
-        <div class="opcionesGrupos">
+        <div class="header-photo-options">
             <ul>
+                <li><a href="./grupos.html">Grupos</a></li>
                 <li><a href="">Todas las fotos</a></li>
                 <li><a href="">Favoritas</a></li>
                 <li><a href="">Configuración</a></li>
@@ -65,7 +68,7 @@
         </div>
 
         <div class="grupos">
-            <div class="buscadorG">
+            <div class="search-groups" >
                 <input type="text" placeholder='"Bariloche"' class="">
                 <button>
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"  class="bi bi-search " fill="white" viewBox="0 0 16 16">
@@ -73,26 +76,61 @@
                         </svg>
                 </button>
             </div>
+             
 
             <div id="allGroups">
-                <div class="nuevoGrupo" onclick="abrirAñadir()">
+                <div class="addNewGroup" onclick="abrirAdd()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-circle-fill " viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                       </svg>
                 </div>
+            </div>  
+
+            <div class="groupPhotos displayNone">
+                <div class="infoGroup">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-gear-fill settings" viewBox="0 0 16 16">
+                        <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+                      </svg>
+                    <h6 id="nombreGrupo"></h6>
+                </div>
+                <div class="photos">
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" class="bi bi-plus-circle-fill newPhoto" viewBox="0 0 16 16" onclick="abriruploadPhotoBg ()">
+                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                  </svg>
+            </div>
+
+            <div class="groupSettings displayNone">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z"/>
+                  </svg>
             </div>
         </div>
 
-        <div class="añadirGrupo">
+        <div class="uploadPhoto-bg displayNone">
+            <div class="upload-img-conteiner" >
+                <label for="image">
+                    <input type="file" class="photoFile" accept="image/*,.pdf image/*,.jpg image/*,.png image/*,.jpeg">
+                    <div class="upload-img_button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                          </svg>
+                    </div>
+                </label>
+            </div>
+            <button class="send-photo">Envíar</button>
+        </div>
+
+        <div class="addGrupo">
             <div class="contentCrearGrupo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-lg cancelGroups" viewBox="0 0 16 16" onclick="cerrarAñadir()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-lg cancelGroups" viewBox="0 0 16 16" onclick="cerrarAdd()">
                     <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
                     <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
                   </svg>
                 <div class="formCrearGrupo">
                     <div class="crearGrupo">
                         <h3>Crear grupo</h3>
-                        <input type="text" class="nombreGrupo" placeholder="Nombre:">
+                        <input type="text" class="nombreGrupo" placeholder="Nombre:" required maxlength="25">
                         <button id="btnCrear">Crear</button>
                     </div>
                     <div class="unirGrupo">
@@ -103,6 +141,7 @@
                 </div>
             </div>
         </div>
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
