--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- footer  -->
     <script defer src="javascript/footer/footerHTML.js"></script>
     <script defer src="javascript/footer/footer.js"></script>
+    <script defer src="javascript/footer/comentarios.js"></script>
 
     <!-- header -->
     <script defer src="javascript/header/headerHTML.js"></script>
