--- a/src/paginas/footer/tutoriales.html
+++ b/src/paginas/footer/tutoriales.html
@@ -29,6 +29,12 @@
     <!-- java script  -->
     <script defer src="../../../javascript/mainVars.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+    <script defer src="../../../javascript/base-datos/configuracion.js"></script>
+
     <!-- footer  -->
     <script defer src="../../../javascript/footer/footerHTML.js"></script>
     <script defer src="../../../javascript/footer/footer.js"></script>
@@ -41,13 +47,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body id="Pfooter" class="body-tuto">
+<body id="Pfooter" class="body-tuto" >
     <header class="header1"></header>
+    <section class="tutoriales-inicio">
+        <h5>En Click&Share</h5>
+        <p>Tratamos de resolver todas <br>tus dudas</p>
+    </section >
     <section >
-        <div>
-            <h5>En Click&Share</h5>
-            <p>Tratamos de resolver todas <br>tus dudas</p>
-        </div>
         <ul class="botones-tut">
             <li></li>
             <li></li>
