--- a/src/paginas/registrar.html
+++ b/src/paginas/registrar.html
@@ -53,21 +53,21 @@
         <div class="conteinerCompu ">
             <h1 data-aos="zoom-in">Registrarse</h1>
             <p><a href="iniciar-sesion.html">Ya tengo una cuenta</a></p>
-            <form class="form">
+            <form class="form" autocomplete="off">
                 <label for="email" >
-                    <input type="email" class="mail escribir " placeholder="Email" required>
+                    <input type="email" class="mail escribir " placeholder="Email">
                     <h6 class="submitError"></h6>
                 </label>
                 <label for="username"  >
-                    <input type="text" class="nombre escribir " placeholder="Usuario">
+                    <input type="text" class="nombre escribir " placeholder="Usuario" >
                     <h6 class="submitError"></h6>
                 </label>
                 <label for="password" >
-                    <input type="password" class="contrasena escribir " placeholder="Contraseña">
+                    <input type="password" class="contrasena escribir " placeholder="Contraseña" >
                     <h6 class="submitError"></h6>
                 </label>
                 <label for="password2" >
-                    <input type="password" class="confirmacion escribir " placeholder="Verifique su contraseña">
+                    <input type="password" class="confirmacion escribir " placeholder="Verifique su contraseña" >
                     <h6 class="submitError"></h6>
                 </label>
                 <a class="registrarSubmit"><button type="submit" onclick="registrar(event)" class="boton"> Registrarse</button></a>
