--- a/src/paginas/grupos.html
+++ b/src/paginas/grupos.html
@@ -25,12 +25,21 @@
 
     <script defer src="./../../javascript/grupos/variables.js"></script>
     <script defer src="./../../javascript/grupos/funciones.js"></script>
+
+    <script defer src="./../../javascript/grupos/screen.js"></script>
     <script defer src="./../../javascript/grupos/css-interact.js"></script>
+
     <script defer src="./../../javascript/grupos/grupos.js"></script>
     <script defer src="./../../javascript/grupos/joinGroup.js"></script>
     <script defer src="./../../javascript/grupos/likes.js"></script>
     <script defer src="./../../javascript/grupos/fotos.js"></script>
     <script defer src="./../../javascript/grupos/cuenta.js"></script>
+    <script defer src="./../../javascript/grupos/eliminar.js"></script>
+
+    <!-- toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    
 </head>
 <body id="gruposBody" >
     <header>
@@ -54,10 +63,9 @@
         <!-- header vertical  -->
         <div class="header-photo-options">
             <ul>
-                <li><a href="./grupos.html">Grupos</a></li>
-                <li><a href="">Todas las fotos</a></li>
-                <li><a href="">Favoritas</a></li>
-                <li><a href="">Configuración</a></li>
+                <li onclick="cargarPagina()">Grupos</li>
+                <li onclick="openAllPhotos()">Todas las fotos</li>
+                <li onclick="openLikedPhotos()">Favoritas</li>
                 <li><a href="footer/centro-de-ayuda.html">Ayuda</a></li>
                 <li class="lightmode">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-lightbulb-fill sol" viewBox="0 0 16 16">
@@ -72,81 +80,6 @@
 
         <!-- screen de grupos -->
         <div class="grupos">
-            <div id="allGroups">
-                <div class="addNewGroup" onclick="abrirAdd()">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus-circle-fill " viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-                      </svg>
-                </div>
-            </div>  
-
-            <div class="groupPhotos displayNone">
-                <div class="infoGroup">
-                    <h6 id="nombreGrupo"></h6>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-people-fill" viewBox="0 0 16 16">
-                        <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                        <path fill-rule="evenodd" d="M5.216 14A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216z"/>
-                        <path d="M4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
-                      </svg>
-
-                    <!-- compartir grupo -->
-                    <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-share-fill share-group"  onclick="abrirShareIdBg()" viewBox="0 0 16 16">
-                        <path d="M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5z"/>
-                      </svg>
-
-                    <!-- 3 puntos  -->
-                    <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-three-dots-vertical" id="cartel-opc-grupos" viewBox="0 0 16 16">
-                        <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                      </svg>
-                    <div class="cartel-opc-grupos cerrado" >
-                        <ul>
-                            <li>Salir del grupo</li>
-                            <li >Denunciar grupo</li>
-                        </ul>
-                    </div>
-
-                    <!-- icon agregar foto -->
-                    <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="bi bi-image newPhoto" viewBox="0 0 16 16" onclick="abriruploadPhotoBg()">
-                        <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                        <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
-                      </svg>
-                </div>
-                <div class="photos">
-                </div>
-            </div>
-
-            <div class="account-settings displayNone">
-                <div class="perfilImg">
-                    <div class="IMGperfil">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle perfilCotent" viewBox="0 0 16 16" >
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                        </svg>
-                    </div>
-                    <div class="change-icon-div">
-                        <input type="file" id="nuevo-fotoperfil" accept="image/*,.pdf image/*,.jpg image/*,.png image/*,.jpeg">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-camera" viewBox="0 0 16 16">
-                            <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
-                            <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
-                        </svg>
-                    </div>
-                </div>
-                <label class="username-input-change" for="name">
-                    <p>Nombre:</p>
-                    <input type="text" id="nuevo-username" placeholder="" max="15" min="4">
-                </label>
-                <label class="username-input-change" for="mail">
-                    <p>Mail:</p>
-                    <input type="mail" required id="nuevo-usermail" placeholder="">
-                </label>
-                <label class="username-input-change" for="mail">
-                    <p>Contraseña:</p>
-                    <input type="password" id="nueva-contra" min="6" placeholder="">
-                </label>
-                <label for="submit">
-                    <input type="submit" id="enviar-cambios" value="Guardar cambios">
-                </label>
-            </div>
         </div>
 
         <!-- carteles que aparecen al apretar algo (?) -->
@@ -194,14 +127,33 @@
                     </div>
                     <div class="unirGrupo">
                         <h3>Unirme a grupo</h3>
-                        <input type="text" class="idGrupo" placeholder="ID:">
+                        <input type="text" class="idGrupo" placeholder="ID:" >
                         <button id="btnUnir">Unirme</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        
+        <div class="editGrupo extraBoxes displayNone">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x-lg cancel" viewBox="0 0 16 16" onclick="cerrarEditarGrupo()">
+                <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
+                <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
+            </svg>
+            <div class="content-edit">
+                <h6 class="nombre-grupo-to-edit"></h6>
+                <div class="img-of-group">
+                    <div class="new-img-group">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                          </svg>
+                    </div>
+                    <input type="file" class="new-file-group" accept="image/*,.pdf image/*,.jpg image/*,.png image/*,.jpeg">
+                </div>
+                <input type="text" placeholder="Nombre grupo" id="new-name-group">
+                <button id="enviar-cambios-grupo" >Guardar</button>
+            </div>  
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
