--- a/src/paginas/grupos.html
+++ b/src/paginas/grupos.html
@@ -46,7 +46,7 @@
         <h2>CLICK&SHARE</h2>
         <div class="perfil">
             <h6 class="nombreUsuario"> </h6>
-            <div id="fotoPerfil" class="perfilImg">
+            <div id="fotoPerfil" class="perfilImg" title="Perfil">
             </div>
             <div class="perfil-options shadow cerrado">
                 <button id="miCuenta" onclick="abrirCuenta()">Mi cuenta</button>
@@ -121,6 +121,7 @@
                         <input type="text" class="nombreGrupo" placeholder="Nombre:" required maxlength="25">
                         <button id="btnCrear">Crear</button>
                     </div>
+                    <p>o</p>
                     <div class="unirGrupo">
                         <h3>Unirme a grupo</h3>
                         <input type="text" class="idGrupo" placeholder="ID:" >
