--- a/src/paginas/footer/tutoriales.html
+++ b/src/paginas/footer/tutoriales.html
@@ -50,7 +50,7 @@
 <body id="Pfooter" class="body-tuto" >
     <header class="header1"></header>
     <div style="display: flex; flex-direction: row; margin: 100px 200px; justify-content: center; align-items: center;" >
-        <img src="../../fotos/reparación.svg" style="height: 400px ;">
+        <img src="../../fotos/reparacion.svg" style="height: 400px ;">
         <h3 style="font-weight: 900;">¡Ups! Estamos en <br> reparación</h3>
     </div>
     <footer></footer>
