--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="sacarFotos" >
-            <p class="title" >¡SACA FOTOS!</p>
+            <p class="title" >¡Saca fotos!</p>
             <p class="explicacion">Saca fotos y <span>automáticamente </span>
                 se guardarán en el grupo/grupos 
                 que habías seleccionado.<br>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div  >
-            <p class="title" >DESCARGÁ TODO</p>
+            <p class="title" >Descargá todo</p>
             <p class="explicacion">Por último, tienes la opción de descargar
                 las fotos desde nuestra página web. 
             </p>
